# nodejs/src/routes/image-routes.ts
@@ -6,18 +6,18 @@ import { imageGrayScale } from "../controllers/image-controllers/image-grayscale
 
 const router = express.Router();
 
-router.post("/image_resize", imageResize);
+router.post("/resize", imageResize);
 
-router.get("/image_resize", notDefined);
-router.put("/image_resize", notDefined);
-router.delete("/image_resize", notDefined);
-router.patch("/image_resize", notDefined);
+router.get("/resize", notDefined);
+router.put("/resize", notDefined);
+router.delete("/resize", notDefined);
+router.patch("/resize", notDefined);
 
-router.post("/image_grayscale", imageGrayScale);
+router.post("/grayscale", imageGrayScale);
 
-router.get("/image_grayscale", notDefined);
-router.put("/image_grayscale", notDefined);
-router.delete("/image_grayscale", notDefined);
-router.patch("/image_grayscale", notDefined);
+router.get("/grayscale", notDefined);
+router.put("/grayscale", notDefined);
+router.delete("/grayscale", notDefined);
+router.patch("/grayscale", notDefined);
 
 export default router;
